--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,15 @@
 
     form {
         grid-area: f;
+        display: flex;
+        flex-direction: row;
+        gap: 5px;
+
+        .buttons {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
     }
 
     .variables {
