--- a/src/app/components/forminput/forminput.component.html
+++ b/src/app/components/forminput/forminput.component.html
@@ -1,4 +1,4 @@
-<div class="input" *ngIf='!!data'>
-    <!-- <label [for]="data.name">{{ data.name }}</label> -->
+<div class="input">
+    <label [for]="data.name">{{ data.name }}</label>
     <input [(ngModel)]='value' />
 </div>
