--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,3 +1,6 @@
-<button (click)='onClick()'>
-    {{ data.label }}
-</button>
+
+<div>
+    <button mat-flat-button color='accent' (click)='onClick()'>
+        {{ data.label }}
+    </button>
+</div>
