--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,6 +29,8 @@
             display: flex;
             align-items: center;
             flex-direction: column;
+            gap: 1.66em;
+            margin-top: 10px;
         }
     }
 
