--- a/src/app/components/formselect/formselect.component.html
+++ b/src/app/components/formselect/formselect.component.html
@@ -1,10 +1,9 @@
-<div class="select">
-    <label [for]="data.name">{{ data.name }}</label>
-    <select [(ngModel)]='value'>
-        <option 
+<mat-form-field class="select">
+    <mat-label>{{ data.name }}</mat-label>
+    <mat-select [(ngModel)]='value'>
+        <mat-option 
             *ngFor='let opt of options'
             [value]='opt'
-            [label]='opt'
-        ></option>
-    </select>
-</div>
+        >{{ opt }}</mat-option>
+    </mat-select>
+</mat-form-field>
